--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Love stories'
 - !lcsh 'Adventure stories'
 - !lcc 'PR'
+- GITenberg
 title: Vayenne
 url: http://www.gutenberg.org/ebooks/39652
